# GoWeeV1

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
aiosqlite/: __init__.py
alembic/versions/: 20240605_init_auth_profile.py  20240615_add_orchestrator_workflows.py
contracts/asyncapi/: cityguide-events.yaml
contracts/openapi/: auth_profile.yaml  delivery_prefetch.yaml  paywall_billing.yaml  route_planner.yaml  story_service.yaml  trip_runtime.yaml  tts_service.yaml
docs/: README.md  diagrams.md
infra/grafana/provisioning/dashboards/: qos.json
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: smoke.http  smoke.sh
services/auth_profile/: Dockerfile  README.md  pyproject.toml
services/auth_profile/app/: api.py  deps.py  main.py  models.py  schemas.py
services/delivery_prefetch/: README.md  pyproject.toml
services/delivery_prefetch/app/: __init__.py  api.py  deps.py  kafka_loop.py  main.py  schemas.py  storage.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/app/: api.py  main.py  models.py  schemas.py  workflow.py
services/paywall_billing/: Dockerfile  README.md  pyproject.toml
services/paywall_billing/app/: __init__.py  api.py  main.py  schemas.py
services/route_planner/: Dockerfile  README.md  pyproject.toml
services/route_planner/app/: api.py  deps.py  main.py  maps.py  models.py  schemas.py
services/story_service/: Dockerfile  README.md  pyproject.toml
services/story_service/app/: api.py  deps.py  llm.py  main.py  models.py  qc.py  schemas.py
services/trip_runtime/: README.md  pyproject.toml
services/trip_runtime/app/: api.py  deps.py  main.py  schemas.py
services/tts_service/: Dockerfile  README.md  pyproject.toml
services/tts_service/app/: __init__.py  api.py  deps.py  kafka_loop.py  main.py  models.py  schemas.py  tts.py
src/common/: __init__.py  db.py  kafka.py  logging.py  metrics.py  outbox.py  settings.py  telemetry.py
src/goweerv1/: __init__.py
template_service/: Dockerfile  README.md  pyproject.toml
template_service/app/: deps.py  kafka_loop.py  main.py
tests/: test_delivery_prefetch_service.py  test_happy_path.py  test_orchestrator.py  test_paywall_billing.py  test_route_planner.py  test_story_service.py  test_trip_runtime.py  test_tts_service.py
