[tool.poetry]
name = "goweerv1"
version = "0.1.0"
description = ""
authors = ["GoWee <example@example.com>"]
packages = [{ include = "goweerv1", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg = {version = "^3.1.0", extras = ["binary"]}
httpx = "^0.27.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-psycopg = "^0.46b0"
prometheus-client = "^0.20.0"
aiokafka = "^0.10.0"
structlog = "^24.1.0"
aiosqlite = "^0.20.0"
trio = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.7"
mypy = "^1.10.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
