[tool.poetry]
name = "paywall_billing"
version = "0.1.0"
description = "Paywall billing service"
authors = ["Example <example@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
